--- a/bt_tutorial03/package.xml
+++ b/bt_tutorial03/package.xml
@@ -7,7 +7,7 @@
   <maintainer email="m12watanabe1a@gmail.com">m12watanabe1a</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
 
   <depend>behaviortree_cpp_v3</depend>
 
